# whisper-workbench

./: .gitignore  AGENTS.md  CLAUDE.md  PROGRESS_AND_INSIGHTS.md  README.md  main.py  play.sh  pyproject.toml  run.sh  setup.bat  setup.ps1  setup.sh
.codex/: AGENTS.md  HANDOFF.md  ISSUES.md  TASKS.md  TODO.md
docs/: README.md  agent-workflow.md  architecture.md  cli.md
docs/plans/: 2026-03-12-i-001-stale-cmake-cache.md  2026-03-13-v1-v2-issue-reorg.md  README.md
scripts/: __init__.py  detect_audio_segments_by_db.py  extract_srt_to_txt.py  run.sh  setup_whisper.py  setup_whisper_cpp.py  subtitles_extract_text_from_srt.py  sync_srt_to_txt.py  sync_subtitles.py  sync_txt_to_srt.py  test.sh  test_play.sh  trim_silence.py  trim_silence_260303_whisper.sh  video_trim_ffmpeg.py
src/: llm_correct.py  postprocess.py  srt_utils.py  text_normalization.py  transcription_backends.py  whisper_utils.py
tasks/: lessons.md
tests/: test_llm_correct_chunking.py  test_main_vad_args.py  test_setup_whisper_cpp.py  test_text_normalization.py
